src/mafralang_grammar.output
Terminais sem uso na gramática

    QUOTES


Gramática

    0 $accept: program $end

    1 program: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration
    4                 | error

    5 external_declaration: function_definition
    6                     | declaration

    7 $@1: %empty

    8 function_definition: declaration_specifiers declarator $@1 declaration_list compound_statement

    9 $@2: %empty

   10 function_definition: declaration_specifiers declarator $@2 compound_statement

   11 declaration_list: declaration
   12                 | declaration_list declaration

   13 declaration: declaration_specifiers SEMICOLON
   14            | declaration_specifiers init_declarator_list SEMICOLON

   15 declaration_specifiers: TYPE
   16                       | TYPE declaration_specifiers

   17 init_declarator_list: declarator
   18                     | init_declarator_list COMMA declarator

   19 declarator: direct_declarator

   20 direct_declarator: ID
   21                  | MAIN
   22                  | LEFT_PARENTHESES declarator RIGHT_PARENTHESES
   23                  | direct_declarator LEFT_PARENTHESES RIGHT_PARENTHESES
   24                  | direct_declarator LEFT_PARENTHESES parameter_list RIGHT_PARENTHESES
   25                  | direct_declarator LEFT_PARENTHESES identifier_list RIGHT_PARENTHESES
   26                  | direct_declarator LEFT_PARENTHESES error RIGHT_PARENTHESES

   27 identifier_list: ID
   28                | identifier_list COMMA ID

   29 parameter_list: parameter_declaration
   30               | parameter_list COMMA parameter_declaration

   31 parameter_declaration: declaration_specifiers declarator
   32                      | declaration_specifiers abstract_declarator

   33 abstract_declarator: direct_abstract_declarator

   34 direct_abstract_declarator: LEFT_PARENTHESES abstract_declarator RIGHT_PARENTHESES
   35                           | LEFT_PARENTHESES RIGHT_PARENTHESES
   36                           | direct_abstract_declarator LEFT_PARENTHESES RIGHT_PARENTHESES
   37                           | direct_abstract_declarator LEFT_PARENTHESES parameter_list RIGHT_PARENTHESES

   38 compound_statement: LEFT_CURLY_BRACKET RIGHT_CURLY_BRACKET
   39                   | LEFT_CURLY_BRACKET block_item_list RIGHT_CURLY_BRACKET

   40 block_item_list: block_item
   41                | block_item_list block_item

   42 block_item: declaration
   43           | statement

   44 statement: expression_statement
   45          | compound_statement
   46          | conditional_statement
   47          | iteration_statement
   48          | input_statement
   49          | output_statement
   50          | return_statement
   51          | error

   52 expression_statement: SEMICOLON
   53                     | expression SEMICOLON

   54 conditional_statement: IF LEFT_PARENTHESES expression RIGHT_PARENTHESES statement
   55                      | IF LEFT_PARENTHESES expression RIGHT_PARENTHESES statement ELSE statement

   56 iteration_statement: FOR LEFT_PARENTHESES expression_statement expression_statement expression RIGHT_PARENTHESES statement
   57                    | FOR LEFT_PARENTHESES expression_statement expression_statement RIGHT_PARENTHESES statement
   58                    | FOR LEFT_PARENTHESES declaration expression_statement expression RIGHT_PARENTHESES statement
   59                    | FOR LEFT_PARENTHESES declaration expression_statement RIGHT_PARENTHESES statement
   60                    | FORALL LEFT_PARENTHESES expression RIGHT_PARENTHESES statement

   61 input_statement: READ LEFT_PARENTHESES expression RIGHT_PARENTHESES SEMICOLON

   62 output_statement: WRITE LEFT_PARENTHESES primary_expression RIGHT_PARENTHESES SEMICOLON
   63                 | WRITELN LEFT_PARENTHESES primary_expression RIGHT_PARENTHESES SEMICOLON

   64 return_statement: RETURN expression SEMICOLON

   65 set_expression_list: is_set_expression
   66                    | add_expression
   67                    | remove_expression
   68                    | exists_expression

   69 is_set_expression: IS_SET LEFT_PARENTHESES ID RIGHT_PARENTHESES

   70 add_expression: ADD LEFT_PARENTHESES expression RIGHT_PARENTHESES

   71 remove_expression: REMOVE LEFT_PARENTHESES expression RIGHT_PARENTHESES

   72 exists_expression: EXISTS LEFT_PARENTHESES expression RIGHT_PARENTHESES

   73 expression: expression COMMA assignment_expression
   74           | assignment_expression

   75 assignment_expression: unary_expression ASSIGN assignment_expression
   76                      | relational_expression

   77 relational_expression: arithmetic_expression
   78                      | relational_expression CLT arithmetic_expression
   79                      | relational_expression CLE arithmetic_expression
   80                      | relational_expression CEQ arithmetic_expression
   81                      | relational_expression CGE arithmetic_expression
   82                      | relational_expression CGT arithmetic_expression
   83                      | relational_expression CNE arithmetic_expression

   84 arithmetic_expression: logical_expression
   85                      | arithmetic_expression ADD_OP logical_expression
   86                      | arithmetic_expression SUB_OP logical_expression
   87                      | arithmetic_expression MULT logical_expression
   88                      | arithmetic_expression DIVIDE logical_expression

   89 logical_expression: set_expression
   90                   | NEGATE set_expression
   91                   | logical_expression AND set_expression
   92                   | logical_expression OR set_expression

   93 set_expression: cast_expression
   94               | set_expression IN cast_expression

   95 cast_expression: unary_expression
   96                | LEFT_PARENTHESES type_name RIGHT_PARENTHESES cast_expression

   97 type_name: specifier_qualifier_list
   98          | specifier_qualifier_list abstract_declarator
   99          | specifier_qualifier_list declarator

  100 specifier_qualifier_list: TYPE specifier_qualifier_list
  101                         | TYPE

  102 unary_expression: postfix_expression
  103                 | set_expression_list
  104                 | function_expression
  105                 | SUB_OP cast_expression

  106 function_expression: ID LEFT_PARENTHESES initializer_list RIGHT_PARENTHESES

  107 postfix_expression: primary_expression
  108                   | LEFT_PARENTHESES type_name RIGHT_PARENTHESES LEFT_CURLY_BRACKET initializer_list RIGHT_CURLY_BRACKET
  109                   | LEFT_PARENTHESES type_name RIGHT_PARENTHESES LEFT_CURLY_BRACKET initializer_list COMMA RIGHT_CURLY_BRACKET

  110 initializer_list: initializer
  111                 | initializer_list COMMA initializer

  112 initializer: assignment_expression
  113            | LEFT_CURLY_BRACKET initializer_list RIGHT_CURLY_BRACKET
  114            | LEFT_CURLY_BRACKET initializer_list COMMA RIGHT_CURLY_BRACKET

  115 primary_expression: ID
  116                   | INTEGER
  117                   | FLOAT
  118                   | STRING
  119                   | EMPTY
  120                   | LEFT_PARENTHESES expression RIGHT_PARENTHESES


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256) 4 26 51
    ID <strType> (258) 20 27 28 69 106 115
    EMPTY <strType> (259) 119
    TYPE <strType> (260) 15 16 100 101
    FLOAT <strType> (261) 117
    INTEGER <strType> (262) 116
    MAIN <strType> (263) 21
    RETURN <strType> (264) 64
    IF <strType> (265) 54 55
    FOR <strType> (266) 56 57 58 59
    FORALL <strType> (267) 60
    ELSE <strType> (268) 55
    READ <strType> (269) 61
    WRITE <strType> (270) 62
    WRITELN <strType> (271) 63
    IS_SET <strType> (272) 69
    REMOVE <strType> (273) 71
    ADD <strType> (274) 70
    IN <strType> (275) 94
    STRING <strType> (276) 118
    EXISTS <strType> (277) 72
    LEFT_CURLY_BRACKET <symbol> (278) 38 39 108 109 113 114
    RIGHT_CURLY_BRACKET <symbol> (279) 38 39 108 109 113 114
    LEFT_PARENTHESES <symbol> (280) 22 23 24 25 26 34 35 36 37 54 55 56 57 58 59 60 61 62 63 69 70 71 72 96 106 108 109 120
    RIGHT_PARENTHESES <symbol> (281) 22 23 24 25 26 34 35 36 37 54 55 56 57 58 59 60 61 62 63 69 70 71 72 96 106 108 109 120
    QUOTES <symbol> (282)
    SEMICOLON <symbol> (283) 13 14 52 53 61 62 63 64
    COMMA <symbol> (284) 18 28 30 73 109 111 114
    NEGATE <symbol> (285) 90
    AND <symbol> (286) 91
    OR <symbol> (287) 92
    ADD_OP <symbol> (288) 85
    SUB_OP <symbol> (289) 86 105
    DIVIDE <symbol> (290) 88
    MULT <symbol> (291) 87
    ASSIGN <symbol> (292) 75
    CLT <symbol> (293) 78
    CLE <symbol> (294) 79
    CEQ <symbol> (295) 80
    CGE <symbol> (296) 81
    CGT <symbol> (297) 82
    CNE <symbol> (298) 83
    THEN (299)


Não terminais com as regras onde eles aparecem

    $accept (45)
        à esquerda: 0
    program <stmt> (46)
        à esquerda: 1
        à direita: 0
    translation_unit <stmt> (47)
        à esquerda: 2 3 4
        à direita: 1 3
    external_declaration <stmt> (48)
        à esquerda: 5 6
        à direita: 2 3
    function_definition <stmt> (49)
        à esquerda: 8 10
        à direita: 5
    $@1 (50)
        à esquerda: 7
        à direita: 8
    $@2 (51)
        à esquerda: 9
        à direita: 10
    declaration_list <stmt> (52)
        à esquerda: 11 12
        à direita: 8 12
    declaration <stmt> (53)
        à esquerda: 13 14
        à direita: 6 11 12 42 58 59
    declaration_specifiers <stmt> (54)
        à esquerda: 15 16
        à direita: 8 10 13 14 16 31 32
    init_declarator_list <stmt> (55)
        à esquerda: 17 18
        à direita: 14 18
    declarator <stmt> (56)
        à esquerda: 19
        à direita: 8 10 17 18 22 31 99
    direct_declarator <stmt> (57)
        à esquerda: 20 21 22 23 24 25 26
        à direita: 19 23 24 25 26
    identifier_list <stmt> (58)
        à esquerda: 27 28
        à direita: 25 28
    parameter_list <stmt> (59)
        à esquerda: 29 30
        à direita: 24 30 37
    parameter_declaration <stmt> (60)
        à esquerda: 31 32
        à direita: 29 30
    abstract_declarator <stmt> (61)
        à esquerda: 33
        à direita: 32 34 98
    direct_abstract_declarator <stmt> (62)
        à esquerda: 34 35 36 37
        à direita: 33 36 37
    compound_statement <stmt> (63)
        à esquerda: 38 39
        à direita: 8 10 45
    block_item_list <stmt> (64)
        à esquerda: 40 41
        à direita: 39 41
    block_item <stmt> (65)
        à esquerda: 42 43
        à direita: 40 41
    statement <stmt> (66)
        à esquerda: 44 45 46 47 48 49 50 51
        à direita: 43 54 55 56 57 58 59 60
    expression_statement <stmt> (67)
        à esquerda: 52 53
        à direita: 44 56 57 58 59
    conditional_statement <stmt> (68)
        à esquerda: 54 55
        à direita: 46
    iteration_statement <stmt> (69)
        à esquerda: 56 57 58 59 60
        à direita: 47
    input_statement <stmt> (70)
        à esquerda: 61
        à direita: 48
    output_statement <stmt> (71)
        à esquerda: 62 63
        à direita: 49
    return_statement <stmt> (72)
        à esquerda: 64
        à direita: 50
    set_expression_list <stmt> (73)
        à esquerda: 65 66 67 68
        à direita: 103
    is_set_expression <stmt> (74)
        à esquerda: 69
        à direita: 65
    add_expression <stmt> (75)
        à esquerda: 70
        à direita: 66
    remove_expression <stmt> (76)
        à esquerda: 71
        à direita: 67
    exists_expression <stmt> (77)
        à esquerda: 72
        à direita: 68
    expression <stmt> (78)
        à esquerda: 73 74
        à direita: 53 54 55 56 58 60 61 64 70 71 72 73 120
    assignment_expression <stmt> (79)
        à esquerda: 75 76
        à direita: 73 74 75 112
    relational_expression <stmt> (80)
        à esquerda: 77 78 79 80 81 82 83
        à direita: 76 78 79 80 81 82 83
    arithmetic_expression <stmt> (81)
        à esquerda: 84 85 86 87 88
        à direita: 77 78 79 80 81 82 83 85 86 87 88
    logical_expression <stmt> (82)
        à esquerda: 89 90 91 92
        à direita: 84 85 86 87 88 91 92
    set_expression <stmt> (83)
        à esquerda: 93 94
        à direita: 89 90 91 92 94
    cast_expression <stmt> (84)
        à esquerda: 95 96
        à direita: 93 94 96 105
    type_name <stmt> (85)
        à esquerda: 97 98 99
        à direita: 96 108 109
    specifier_qualifier_list <stmt> (86)
        à esquerda: 100 101
        à direita: 97 98 99 100
    unary_expression <stmt> (87)
        à esquerda: 102 103 104 105
        à direita: 75 95
    function_expression <stmt> (88)
        à esquerda: 106
        à direita: 104
    postfix_expression <stmt> (89)
        à esquerda: 107 108 109
        à direita: 102
    initializer_list <stmt> (90)
        à esquerda: 110 111
        à direita: 106 108 109 111 113 114
    initializer <stmt> (91)
        à esquerda: 112 113 114
        à direita: 110 111
    primary_expression <stmt> (92)
        à esquerda: 115 116 117 118 119 120
        à direita: 62 63 107


Estado 0

    0 $accept: • program $end

    error  deslocar, e ir ao estado 1
    TYPE   deslocar, e ir ao estado 2

    program                 ir ao estado 3
    translation_unit        ir ao estado 4
    external_declaration    ir ao estado 5
    function_definition     ir ao estado 6
    declaration             ir ao estado 7
    declaration_specifiers  ir ao estado 8


Estado 1

    4 translation_unit: error •

    $end  reduzir usando a regra 4 (translation_unit)
    TYPE  reduzir usando a regra 4 (translation_unit)


Estado 2

   15 declaration_specifiers: TYPE •
   16                       | TYPE • declaration_specifiers

    TYPE  deslocar, e ir ao estado 2

    ID                reduzir usando a regra 15 (declaration_specifiers)
    MAIN              reduzir usando a regra 15 (declaration_specifiers)
    LEFT_PARENTHESES  reduzir usando a regra 15 (declaration_specifiers)
    SEMICOLON         reduzir usando a regra 15 (declaration_specifiers)

    declaration_specifiers  ir ao estado 9


Estado 3

    0 $accept: program • $end

    $end  deslocar, e ir ao estado 10


Estado 4

    1 program: translation_unit •
    3 translation_unit: translation_unit • external_declaration

    TYPE  deslocar, e ir ao estado 2

    $end  reduzir usando a regra 1 (program)

    external_declaration    ir ao estado 11
    function_definition     ir ao estado 6
    declaration             ir ao estado 7
    declaration_specifiers  ir ao estado 8


Estado 5

    2 translation_unit: external_declaration •

    $end  reduzir usando a regra 2 (translation_unit)
    TYPE  reduzir usando a regra 2 (translation_unit)


Estado 6

    5 external_declaration: function_definition •

    $end  reduzir usando a regra 5 (external_declaration)
    TYPE  reduzir usando a regra 5 (external_declaration)


Estado 7

    6 external_declaration: declaration •

    $end  reduzir usando a regra 6 (external_declaration)
    TYPE  reduzir usando a regra 6 (external_declaration)


Estado 8

    8 function_definition: declaration_specifiers • declarator $@1 declaration_list compound_statement
   10                    | declaration_specifiers • declarator $@2 compound_statement
   13 declaration: declaration_specifiers • SEMICOLON
   14            | declaration_specifiers • init_declarator_list SEMICOLON

    ID                deslocar, e ir ao estado 12
    MAIN              deslocar, e ir ao estado 13
    LEFT_PARENTHESES  deslocar, e ir ao estado 14
    SEMICOLON         deslocar, e ir ao estado 15

    init_declarator_list  ir ao estado 16
    declarator            ir ao estado 17
    direct_declarator     ir ao estado 18


Estado 9

   16 declaration_specifiers: TYPE declaration_specifiers •

    ID                reduzir usando a regra 16 (declaration_specifiers)
    MAIN              reduzir usando a regra 16 (declaration_specifiers)
    LEFT_PARENTHESES  reduzir usando a regra 16 (declaration_specifiers)
    SEMICOLON         reduzir usando a regra 16 (declaration_specifiers)


Estado 10

    0 $accept: program $end •

    $padrão  aceitar


Estado 11

    3 translation_unit: translation_unit external_declaration •

    $end  reduzir usando a regra 3 (translation_unit)
    TYPE  reduzir usando a regra 3 (translation_unit)


Estado 12

   20 direct_declarator: ID •

    TYPE                reduzir usando a regra 20 (direct_declarator)
    LEFT_CURLY_BRACKET  reduzir usando a regra 20 (direct_declarator)
    LEFT_PARENTHESES    reduzir usando a regra 20 (direct_declarator)
    SEMICOLON           reduzir usando a regra 20 (direct_declarator)
    COMMA               reduzir usando a regra 20 (direct_declarator)


Estado 13

   21 direct_declarator: MAIN •

    TYPE                reduzir usando a regra 21 (direct_declarator)
    LEFT_CURLY_BRACKET  reduzir usando a regra 21 (direct_declarator)
    LEFT_PARENTHESES    reduzir usando a regra 21 (direct_declarator)
    SEMICOLON           reduzir usando a regra 21 (direct_declarator)
    COMMA               reduzir usando a regra 21 (direct_declarator)


Estado 14

   22 direct_declarator: LEFT_PARENTHESES • declarator RIGHT_PARENTHESES

    ID                deslocar, e ir ao estado 225
    MAIN              deslocar, e ir ao estado 226
    LEFT_PARENTHESES  deslocar, e ir ao estado 227

    declarator         ir ao estado 19
    direct_declarator  ir ao estado 228


Estado 15

   13 declaration: declaration_specifiers SEMICOLON •

    $end  reduzir usando a regra 13 (declaration)
    TYPE  reduzir usando a regra 13 (declaration)


Estado 16

   14 declaration: declaration_specifiers init_declarator_list • SEMICOLON
   18 init_declarator_list: init_declarator_list • COMMA declarator

    SEMICOLON  deslocar, e ir ao estado 20
    COMMA      deslocar, e ir ao estado 21


Estado 17

    8 function_definition: declaration_specifiers declarator • $@1 declaration_list compound_statement
   10                    | declaration_specifiers declarator • $@2 compound_statement
   17 init_declarator_list: declarator •

    TYPE                reduzir usando a regra 7 ($@1)
    LEFT_CURLY_BRACKET  reduzir usando a regra 9 ($@2)
    SEMICOLON           reduzir usando a regra 17 (init_declarator_list)
    COMMA               reduzir usando a regra 17 (init_declarator_list)

    $@1  ir ao estado 22
    $@2  ir ao estado 23


Estado 18

   19 declarator: direct_declarator •
   23 direct_declarator: direct_declarator • LEFT_PARENTHESES RIGHT_PARENTHESES
   24                  | direct_declarator • LEFT_PARENTHESES parameter_list RIGHT_PARENTHESES
   25                  | direct_declarator • LEFT_PARENTHESES identifier_list RIGHT_PARENTHESES
   26                  | direct_declarator • LEFT_PARENTHESES error RIGHT_PARENTHESES

    LEFT_PARENTHESES  deslocar, e ir ao estado 24

    TYPE                reduzir usando a regra 19 (declarator)
    LEFT_CURLY_BRACKET  reduzir usando a regra 19 (declarator)
    SEMICOLON           reduzir usando a regra 19 (declarator)
    COMMA               reduzir usando a regra 19 (declarator)


Estado 19

   22 direct_declarator: LEFT_PARENTHESES declarator • RIGHT_PARENTHESES

    RIGHT_PARENTHESES  deslocar, e ir ao estado 25


Estado 20

   14 declaration: declaration_specifiers init_declarator_list SEMICOLON •

    $end  reduzir usando a regra 14 (declaration)
    TYPE  reduzir usando a regra 14 (declaration)


Estado 21

   18 init_declarator_list: init_declarator_list COMMA • declarator

    ID                deslocar, e ir ao estado 229
    MAIN              deslocar, e ir ao estado 230
    LEFT_PARENTHESES  deslocar, e ir ao estado 231

    declarator         ir ao estado 26
    direct_declarator  ir ao estado 232


Estado 22

    8 function_definition: declaration_specifiers declarator $@1 • declaration_list compound_statement

    TYPE  deslocar, e ir ao estado 2

    declaration_list        ir ao estado 27
    declaration             ir ao estado 28
    declaration_specifiers  ir ao estado 29


Estado 23

   10 function_definition: declaration_specifiers declarator $@2 • compound_statement

    LEFT_CURLY_BRACKET  deslocar, e ir ao estado 30

    compound_statement  ir ao estado 31


Estado 24

   23 direct_declarator: direct_declarator LEFT_PARENTHESES • RIGHT_PARENTHESES
   24                  | direct_declarator LEFT_PARENTHESES • parameter_list RIGHT_PARENTHESES
   25                  | direct_declarator LEFT_PARENTHESES • identifier_list RIGHT_PARENTHESES
   26                  | direct_declarator LEFT_PARENTHESES • error RIGHT_PARENTHESES

    error              deslocar, e ir ao estado 32
    ID                 deslocar, e ir ao estado 33
    TYPE               deslocar, e ir ao estado 233
    RIGHT_PARENTHESES  deslocar, e ir ao estado 34

    declaration_specifiers  ir ao estado 35
    identifier_list         ir ao estado 36
    parameter_list          ir ao estado 37
    parameter_declaration   ir ao estado 38


Estado 25

   22 direct_declarator: LEFT_PARENTHESES declarator RIGHT_PARENTHESES •

    TYPE                reduzir usando a regra 22 (direct_declarator)
    LEFT_CURLY_BRACKET  reduzir usando a regra 22 (direct_declarator)
    LEFT_PARENTHESES    reduzir usando a regra 22 (direct_declarator)
    SEMICOLON           reduzir usando a regra 22 (direct_declarator)
    COMMA               reduzir usando a regra 22 (direct_declarator)


Estado 26

   18 init_declarator_list: init_declarator_list COMMA declarator •

    SEMICOLON  reduzir usando a regra 18 (init_declarator_list)
    COMMA      reduzir usando a regra 18 (init_declarator_list)


Estado 27

    8 function_definition: declaration_specifiers declarator $@1 declaration_list • compound_statement
   12 declaration_list: declaration_list • declaration

    TYPE                deslocar, e ir ao estado 2
    LEFT_CURLY_BRACKET  deslocar, e ir ao estado 30

    declaration             ir ao estado 39
    declaration_specifiers  ir ao estado 29
    compound_statement      ir ao estado 40


Estado 28

   11 declaration_list: declaration •

    TYPE                reduzir usando a regra 11 (declaration_list)
    LEFT_CURLY_BRACKET  reduzir usando a regra 11 (declaration_list)


Estado 29

   13 declaration: declaration_specifiers • SEMICOLON
   14            | declaration_specifiers • init_declarator_list SEMICOLON

    ID                deslocar, e ir ao estado 229
    MAIN              deslocar, e ir ao estado 230
    LEFT_PARENTHESES  deslocar, e ir ao estado 231
    SEMICOLON         deslocar, e ir ao estado 234

    init_declarator_list  ir ao estado 235
    declarator            ir ao estado 41
    direct_declarator     ir ao estado 232


Estado 30

   38 compound_statement: LEFT_CURLY_BRACKET • RIGHT_CURLY_BRACKET
   39                   | LEFT_CURLY_BRACKET • block_item_list RIGHT_CURLY_BRACKET
